fixing overflow issues

--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@ html {
     flex-direction: column;
     width: 100%;
     overflow-x: hidden;
+    overflow-y: auto;
 }
 
 .header {
